WIP need to include roles and add authenticated trials
