# src/YLunchApi.Domain/UserAggregate/User.cs
@@ -1,5 +1,6 @@
 using System.Diagnostics.CodeAnalysis;
 using Microsoft.AspNetCore.Identity;
+using YLunchApi.Domain.Core.Utils;
 using YLunchApi.Domain.UserAggregate.Dto;
 
 namespace YLunchApi.Domain.UserAggregate;
@@ -17,10 +18,10 @@ public sealed class User : IdentityUser
     public User(UserCreateDto userCreateDto)
     {
         Id = Guid.NewGuid().ToString();
-        UserName = userCreateDto.Email;
-        Email = userCreateDto.Email;
+        UserName = userCreateDto.Email.ToLower();
+        Email = userCreateDto.Email.ToLower();
         PhoneNumber = userCreateDto.PhoneNumber;
-        Firstname = userCreateDto.Firstname;
-        Lastname = userCreateDto.Lastname;
+        Firstname = userCreateDto.Firstname.Capitalize();
+        Lastname = userCreateDto.Lastname.Capitalize();
     }
 }
